program/src/Latte/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Latte/Par.y
-----------------------------------------------------------------------------

state 54 contains 1 shift/reduce conflicts.
state 76 contains 1 shift/reduce conflicts.
state 129 contains 1 shift/reduce conflicts.
state 146 contains 1 shift/reduce conflicts.
state 165 contains 1 shift/reduce conflicts.

rule 47 is unused
rule 54 is unused
rule 55 is unused
rule 56 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> Type Ident '(' ListArg ')' Block         (5)
	TopDef -> 'class' Ident ClassBody                  (6)
	TopDef -> 'class' Ident 'extends' Ident ClassBody   (7)
	ListTopDef -> TopDef                               (8)
	ListTopDef -> TopDef ListTopDef                    (9)
	Arg -> Type Ident                                  (10)
	ListArg ->                                         (11)
	ListArg -> Arg                                     (12)
	ListArg -> Arg ',' ListArg                         (13)
	ClassBody -> '{' ListClassStmt '}'                 (14)
	ListClassStmt ->                                   (15)
	ListClassStmt -> ClassStmt ListClassStmt           (16)
	ClassStmt -> ';'                                   (17)
	ClassStmt -> Type ListClassItem ';'                (18)
	ClassStmt -> Type Ident '(' ListArg ')' Block      (19)
	ClassItem -> Ident                                 (20)
	ListClassItem -> ClassItem                         (21)
	ListClassItem -> ClassItem ',' ListClassItem       (22)
	Block -> '{' ListStmt '}'                          (23)
	ListStmt ->                                        (24)
	ListStmt -> Stmt ListStmt                          (25)
	Stmt -> ';'                                        (26)
	Stmt -> Block                                      (27)
	Stmt -> Type ListItem ';'                          (28)
	Stmt -> Ident '=' Expr ';'                         (29)
	Stmt -> Ident '[' Expr ']' '=' Expr ';'            (30)
	Stmt -> Expr6 '.' Ident '=' Expr                   (31)
	Stmt -> Ident '++' ';'                             (32)
	Stmt -> Expr6 '.' Ident '++' ';'                   (33)
	Stmt -> Expr6 '.' Ident '--' ';'                   (34)
	Stmt -> Ident '--' ';'                             (35)
	Stmt -> 'return' Expr ';'                          (36)
	Stmt -> 'return' ';'                               (37)
	Stmt -> 'if' '(' Expr ')' Stmt                     (38)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (39)
	Stmt -> 'while' '(' Expr ')' Stmt                  (40)
	Stmt -> 'for' '(' Type Ident ':' Ident ')' Stmt    (41)
	Stmt -> Expr ';'                                   (42)
	Item -> Ident                                      (43)
	Item -> Ident '=' Expr                             (44)
	ListItem -> Item                                   (45)
	ListItem -> Item ',' ListItem                      (46)
	Construct -> Ident '.'                             (47)
	Type -> 'int'                                      (48)
	Type -> 'string'                                   (49)
	Type -> 'boolean'                                  (50)
	Type -> 'void'                                     (51)
	Type -> Type '[]'                                  (52)
	Type -> Ident                                      (53)
	ListType ->                                        (54)
	ListType -> Type                                   (55)
	ListType -> Type ',' ListType                      (56)
	Expr6 -> Ident                                     (57)
	Expr6 -> Ident '[' Expr ']'                        (58)
	Expr6 -> Integer                                   (59)
	Expr6 -> 'true'                                    (60)
	Expr6 -> 'false'                                   (61)
	Expr6 -> Ident '(' ListExpr ')'                    (62)
	Expr6 -> Expr6 '.' Ident '(' ListExpr ')'          (63)
	Expr6 -> Expr6 '.' Ident                           (64)
	Expr6 -> '(' Type ')null'                          (65)
	Expr6 -> 'new' Type                                (66)
	Expr6 -> 'new' Type '[' Expr ']'                   (67)
	Expr6 -> String                                    (68)
	Expr6 -> '(' Expr ')'                              (69)
	Expr5 -> '-' Expr6                                 (70)
	Expr5 -> '!' Expr6                                 (71)
	Expr5 -> Expr6                                     (72)
	Expr4 -> Expr4 MulOp Expr5                         (73)
	Expr4 -> Expr5                                     (74)
	Expr3 -> Expr3 AddOp Expr4                         (75)
	Expr3 -> Expr4                                     (76)
	Expr2 -> Expr2 RelOp Expr3                         (77)
	Expr2 -> Expr3                                     (78)
	Expr1 -> Expr2 '&&' Expr1                          (79)
	Expr1 -> Expr2                                     (80)
	Expr -> Expr1 '||' Expr                            (81)
	Expr -> Expr1                                      (82)
	ListExpr ->                                        (83)
	ListExpr -> Expr                                   (84)
	ListExpr -> Expr ',' ListExpr                      (85)
	AddOp -> '+'                                       (86)
	AddOp -> '-'                                       (87)
	MulOp -> '*'                                       (88)
	MulOp -> '/'                                       (89)
	MulOp -> '%'                                       (90)
	RelOp -> '<'                                       (91)
	RelOp -> '<='                                      (92)
	RelOp -> '>'                                       (93)
	RelOp -> '>='                                      (94)
	RelOp -> '=='                                      (95)
	RelOp -> '!='                                      (96)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	')null'        { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'--'           { PT _ (TS _ 13) }
	'.'            { PT _ (TS _ 14) }
	'/'            { PT _ (TS _ 15) }
	':'            { PT _ (TS _ 16) }
	';'            { PT _ (TS _ 17) }
	'<'            { PT _ (TS _ 18) }
	'<='           { PT _ (TS _ 19) }
	'='            { PT _ (TS _ 20) }
	'=='           { PT _ (TS _ 21) }
	'>'            { PT _ (TS _ 22) }
	'>='           { PT _ (TS _ 23) }
	'['            { PT _ (TS _ 24) }
	'[]'           { PT _ (TS _ 25) }
	']'            { PT _ (TS _ 26) }
	'boolean'      { PT _ (TS _ 27) }
	'class'        { PT _ (TS _ 28) }
	'else'         { PT _ (TS _ 29) }
	'extends'      { PT _ (TS _ 30) }
	'false'        { PT _ (TS _ 31) }
	'for'          { PT _ (TS _ 32) }
	'if'           { PT _ (TS _ 33) }
	'int'          { PT _ (TS _ 34) }
	'new'          { PT _ (TS _ 35) }
	'return'       { PT _ (TS _ 36) }
	'string'       { PT _ (TS _ 37) }
	'true'         { PT _ (TS _ 38) }
	'void'         { PT _ (TS _ 39) }
	'while'        { PT _ (TS _ 40) }
	'{'            { PT _ (TS _ 41) }
	'||'           { PT _ (TS _ 42) }
	'}'            { PT _ (TS _ 43) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rules 5, 6, 7
	ListTopDef      rules 8, 9
	Arg             rule  10
	ListArg         rules 11, 12, 13
	ClassBody       rule  14
	ListClassStmt   rules 15, 16
	ClassStmt       rules 17, 18, 19
	ClassItem       rule  20
	ListClassItem   rules 21, 22
	Block           rule  23
	ListStmt        rules 24, 25
	Stmt            rules 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42
	Item            rules 43, 44
	ListItem        rules 45, 46
	Construct       rule  47
	Type            rules 48, 49, 50, 51, 52, 53
	ListType        rules 54, 55, 56
	Expr6           rules 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69
	Expr5           rules 70, 71, 72
	Expr4           rules 73, 74
	Expr3           rules 75, 76
	Expr2           rules 77, 78
	Expr1           rules 79, 80
	Expr            rules 81, 82
	ListExpr        rules 83, 84, 85
	AddOp           rules 86, 87
	MulOp           rules 88, 89, 90
	RelOp           rules 91, 92, 93, 94, 95, 96

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'boolean'      shift, and enter state 8
	'class'        shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Program        goto state 4
	TopDef         goto state 5
	ListTopDef     goto state 6
	Type           goto state 7

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!'            reduce using rule 1
	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	')null'        reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'.'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	'[]'           reduce using rule 1
	']'            reduce using rule 1
	'boolean'      reduce using rule 1
	'else'         reduce using rule 1
	'extends'      reduce using rule 1
	'false'        reduce using rule 1
	'for'          reduce using rule 1
	'if'           reduce using rule 1
	'int'          reduce using rule 1
	'new'          reduce using rule 1
	'return'       reduce using rule 1
	'string'       reduce using rule 1
	'true'         reduce using rule 1
	'void'         reduce using rule 1
	'while'        reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1
	'}'            reduce using rule 1
	L_Ident        reduce using rule 1
	L_integ        reduce using rule 1
	L_quoted       reduce using rule 1


State 3

	Type -> Ident .                                     (rule 53)

	'!'            reduce using rule 53
	'!='           reduce using rule 53
	'%'            reduce using rule 53
	'&&'           reduce using rule 53
	'('            reduce using rule 53
	')'            reduce using rule 53
	'*'            reduce using rule 53
	'+'            reduce using rule 53
	','            reduce using rule 53
	'-'            reduce using rule 53
	'.'            reduce using rule 53
	'/'            reduce using rule 53
	';'            reduce using rule 53
	'<'            reduce using rule 53
	'<='           reduce using rule 53
	'=='           reduce using rule 53
	'>'            reduce using rule 53
	'>='           reduce using rule 53
	'['            reduce using rule 53
	'[]'           reduce using rule 53
	']'            reduce using rule 53
	'boolean'      reduce using rule 53
	'else'         reduce using rule 53
	'false'        reduce using rule 53
	'for'          reduce using rule 53
	'if'           reduce using rule 53
	'int'          reduce using rule 53
	'new'          reduce using rule 53
	'return'       reduce using rule 53
	'string'       reduce using rule 53
	'true'         reduce using rule 53
	'void'         reduce using rule 53
	'while'        reduce using rule 53
	'{'            reduce using rule 53
	'||'           reduce using rule 53
	'}'            reduce using rule 53
	L_Ident        reduce using rule 53
	L_integ        reduce using rule 53
	L_quoted       reduce using rule 53


State 4

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 5

	ListTopDef -> TopDef .                              (rule 8)
	ListTopDef -> TopDef . ListTopDef                   (rule 9)

	'boolean'      shift, and enter state 8
	'class'        shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_Ident        shift, and enter state 2
	%eof           reduce using rule 8

	Ident          goto state 3
	TopDef         goto state 5
	ListTopDef     goto state 16
	Type           goto state 7

State 6

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 7

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 5)
	Type -> Type . '[]'                                 (rule 52)

	'[]'           shift, and enter state 15
	L_Ident        shift, and enter state 2

	Ident          goto state 14

State 8

	Type -> 'boolean' .                                 (rule 50)

	'!'            reduce using rule 50
	'!='           reduce using rule 50
	'%'            reduce using rule 50
	'&&'           reduce using rule 50
	'('            reduce using rule 50
	')'            reduce using rule 50
	')null'        reduce using rule 50
	'*'            reduce using rule 50
	'+'            reduce using rule 50
	','            reduce using rule 50
	'-'            reduce using rule 50
	'.'            reduce using rule 50
	'/'            reduce using rule 50
	';'            reduce using rule 50
	'<'            reduce using rule 50
	'<='           reduce using rule 50
	'=='           reduce using rule 50
	'>'            reduce using rule 50
	'>='           reduce using rule 50
	'['            reduce using rule 50
	'[]'           reduce using rule 50
	']'            reduce using rule 50
	'boolean'      reduce using rule 50
	'else'         reduce using rule 50
	'false'        reduce using rule 50
	'for'          reduce using rule 50
	'if'           reduce using rule 50
	'int'          reduce using rule 50
	'new'          reduce using rule 50
	'return'       reduce using rule 50
	'string'       reduce using rule 50
	'true'         reduce using rule 50
	'void'         reduce using rule 50
	'while'        reduce using rule 50
	'{'            reduce using rule 50
	'||'           reduce using rule 50
	'}'            reduce using rule 50
	L_Ident        reduce using rule 50
	L_integ        reduce using rule 50
	L_quoted       reduce using rule 50


State 9

	TopDef -> 'class' . Ident ClassBody                 (rule 6)
	TopDef -> 'class' . Ident 'extends' Ident ClassBody    (rule 7)

	L_Ident        shift, and enter state 2

	Ident          goto state 13

State 10

	Type -> 'int' .                                     (rule 48)

	'!'            reduce using rule 48
	'!='           reduce using rule 48
	'%'            reduce using rule 48
	'&&'           reduce using rule 48
	'('            reduce using rule 48
	')'            reduce using rule 48
	')null'        reduce using rule 48
	'*'            reduce using rule 48
	'+'            reduce using rule 48
	','            reduce using rule 48
	'-'            reduce using rule 48
	'.'            reduce using rule 48
	'/'            reduce using rule 48
	';'            reduce using rule 48
	'<'            reduce using rule 48
	'<='           reduce using rule 48
	'=='           reduce using rule 48
	'>'            reduce using rule 48
	'>='           reduce using rule 48
	'['            reduce using rule 48
	'[]'           reduce using rule 48
	']'            reduce using rule 48
	'boolean'      reduce using rule 48
	'else'         reduce using rule 48
	'false'        reduce using rule 48
	'for'          reduce using rule 48
	'if'           reduce using rule 48
	'int'          reduce using rule 48
	'new'          reduce using rule 48
	'return'       reduce using rule 48
	'string'       reduce using rule 48
	'true'         reduce using rule 48
	'void'         reduce using rule 48
	'while'        reduce using rule 48
	'{'            reduce using rule 48
	'||'           reduce using rule 48
	'}'            reduce using rule 48
	L_Ident        reduce using rule 48
	L_integ        reduce using rule 48
	L_quoted       reduce using rule 48


State 11

	Type -> 'string' .                                  (rule 49)

	'!'            reduce using rule 49
	'!='           reduce using rule 49
	'%'            reduce using rule 49
	'&&'           reduce using rule 49
	'('            reduce using rule 49
	')'            reduce using rule 49
	')null'        reduce using rule 49
	'*'            reduce using rule 49
	'+'            reduce using rule 49
	','            reduce using rule 49
	'-'            reduce using rule 49
	'.'            reduce using rule 49
	'/'            reduce using rule 49
	';'            reduce using rule 49
	'<'            reduce using rule 49
	'<='           reduce using rule 49
	'=='           reduce using rule 49
	'>'            reduce using rule 49
	'>='           reduce using rule 49
	'['            reduce using rule 49
	'[]'           reduce using rule 49
	']'            reduce using rule 49
	'boolean'      reduce using rule 49
	'else'         reduce using rule 49
	'false'        reduce using rule 49
	'for'          reduce using rule 49
	'if'           reduce using rule 49
	'int'          reduce using rule 49
	'new'          reduce using rule 49
	'return'       reduce using rule 49
	'string'       reduce using rule 49
	'true'         reduce using rule 49
	'void'         reduce using rule 49
	'while'        reduce using rule 49
	'{'            reduce using rule 49
	'||'           reduce using rule 49
	'}'            reduce using rule 49
	L_Ident        reduce using rule 49
	L_integ        reduce using rule 49
	L_quoted       reduce using rule 49


State 12

	Type -> 'void' .                                    (rule 51)

	'!'            reduce using rule 51
	'!='           reduce using rule 51
	'%'            reduce using rule 51
	'&&'           reduce using rule 51
	'('            reduce using rule 51
	')'            reduce using rule 51
	')null'        reduce using rule 51
	'*'            reduce using rule 51
	'+'            reduce using rule 51
	','            reduce using rule 51
	'-'            reduce using rule 51
	'.'            reduce using rule 51
	'/'            reduce using rule 51
	';'            reduce using rule 51
	'<'            reduce using rule 51
	'<='           reduce using rule 51
	'=='           reduce using rule 51
	'>'            reduce using rule 51
	'>='           reduce using rule 51
	'['            reduce using rule 51
	'[]'           reduce using rule 51
	']'            reduce using rule 51
	'boolean'      reduce using rule 51
	'else'         reduce using rule 51
	'false'        reduce using rule 51
	'for'          reduce using rule 51
	'if'           reduce using rule 51
	'int'          reduce using rule 51
	'new'          reduce using rule 51
	'return'       reduce using rule 51
	'string'       reduce using rule 51
	'true'         reduce using rule 51
	'void'         reduce using rule 51
	'while'        reduce using rule 51
	'{'            reduce using rule 51
	'||'           reduce using rule 51
	'}'            reduce using rule 51
	L_Ident        reduce using rule 51
	L_integ        reduce using rule 51
	L_quoted       reduce using rule 51


State 13

	TopDef -> 'class' Ident . ClassBody                 (rule 6)
	TopDef -> 'class' Ident . 'extends' Ident ClassBody    (rule 7)

	'extends'      shift, and enter state 19
	'{'            shift, and enter state 20

	ClassBody      goto state 18

State 14

	TopDef -> Type Ident . '(' ListArg ')' Block        (rule 5)

	'('            shift, and enter state 17


State 15

	Type -> Type '[]' .                                 (rule 52)

	'!'            reduce using rule 52
	'!='           reduce using rule 52
	'%'            reduce using rule 52
	'&&'           reduce using rule 52
	'('            reduce using rule 52
	')'            reduce using rule 52
	')null'        reduce using rule 52
	'*'            reduce using rule 52
	'+'            reduce using rule 52
	','            reduce using rule 52
	'-'            reduce using rule 52
	'.'            reduce using rule 52
	'/'            reduce using rule 52
	';'            reduce using rule 52
	'<'            reduce using rule 52
	'<='           reduce using rule 52
	'=='           reduce using rule 52
	'>'            reduce using rule 52
	'>='           reduce using rule 52
	'['            reduce using rule 52
	'[]'           reduce using rule 52
	']'            reduce using rule 52
	'boolean'      reduce using rule 52
	'else'         reduce using rule 52
	'false'        reduce using rule 52
	'for'          reduce using rule 52
	'if'           reduce using rule 52
	'int'          reduce using rule 52
	'new'          reduce using rule 52
	'return'       reduce using rule 52
	'string'       reduce using rule 52
	'true'         reduce using rule 52
	'void'         reduce using rule 52
	'while'        reduce using rule 52
	'{'            reduce using rule 52
	'||'           reduce using rule 52
	'}'            reduce using rule 52
	L_Ident        reduce using rule 52
	L_integ        reduce using rule 52
	L_quoted       reduce using rule 52


State 16

	ListTopDef -> TopDef ListTopDef .                   (rule 9)

	%eof           reduce using rule 9


State 17

	TopDef -> Type Ident '(' . ListArg ')' Block        (rule 5)

	')'            reduce using rule 11
	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 26
	ListArg        goto state 27
	Type           goto state 28

State 18

	TopDef -> 'class' Ident ClassBody .                 (rule 6)

	'boolean'      reduce using rule 6
	'class'        reduce using rule 6
	'int'          reduce using rule 6
	'string'       reduce using rule 6
	'void'         reduce using rule 6
	L_Ident        reduce using rule 6
	%eof           reduce using rule 6


State 19

	TopDef -> 'class' Ident 'extends' . Ident ClassBody    (rule 7)

	L_Ident        shift, and enter state 2

	Ident          goto state 25

State 20

	ClassBody -> '{' . ListClassStmt '}'                (rule 14)

	';'            shift, and enter state 24
	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	'}'            reduce using rule 15
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	ListClassStmt  goto state 21
	ClassStmt      goto state 22
	Type           goto state 23

State 21

	ClassBody -> '{' ListClassStmt . '}'                (rule 14)

	'}'            shift, and enter state 37


State 22

	ListClassStmt -> ClassStmt . ListClassStmt          (rule 16)

	';'            shift, and enter state 24
	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	'}'            reduce using rule 15
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	ListClassStmt  goto state 36
	ClassStmt      goto state 22
	Type           goto state 23

State 23

	ClassStmt -> Type . ListClassItem ';'               (rule 18)
	ClassStmt -> Type . Ident '(' ListArg ')' Block     (rule 19)
	Type -> Type . '[]'                                 (rule 52)

	'[]'           shift, and enter state 15
	L_Ident        shift, and enter state 2

	Ident          goto state 33
	ClassItem      goto state 34
	ListClassItem  goto state 35

State 24

	ClassStmt -> ';' .                                  (rule 17)

	';'            reduce using rule 17
	'boolean'      reduce using rule 17
	'int'          reduce using rule 17
	'string'       reduce using rule 17
	'void'         reduce using rule 17
	'}'            reduce using rule 17
	L_Ident        reduce using rule 17


State 25

	TopDef -> 'class' Ident 'extends' Ident . ClassBody    (rule 7)

	'{'            shift, and enter state 20

	ClassBody      goto state 32

State 26

	ListArg -> Arg .                                    (rule 12)
	ListArg -> Arg . ',' ListArg                        (rule 13)

	')'            reduce using rule 12
	','            shift, and enter state 31


State 27

	TopDef -> Type Ident '(' ListArg . ')' Block        (rule 5)

	')'            shift, and enter state 30


State 28

	Arg -> Type . Ident                                 (rule 10)
	Type -> Type . '[]'                                 (rule 52)

	'[]'           shift, and enter state 15
	L_Ident        shift, and enter state 2

	Ident          goto state 29

State 29

	Arg -> Type Ident .                                 (rule 10)

	')'            reduce using rule 10
	','            reduce using rule 10


State 30

	TopDef -> Type Ident '(' ListArg ')' . Block        (rule 5)

	'{'            shift, and enter state 43

	Block          goto state 42

State 31

	ListArg -> Arg ',' . ListArg                        (rule 13)

	')'            reduce using rule 11
	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 26
	ListArg        goto state 41
	Type           goto state 28

State 32

	TopDef -> 'class' Ident 'extends' Ident ClassBody .    (rule 7)

	'boolean'      reduce using rule 7
	'class'        reduce using rule 7
	'int'          reduce using rule 7
	'string'       reduce using rule 7
	'void'         reduce using rule 7
	L_Ident        reduce using rule 7
	%eof           reduce using rule 7


State 33

	ClassStmt -> Type Ident . '(' ListArg ')' Block     (rule 19)
	ClassItem -> Ident .                                (rule 20)

	'('            shift, and enter state 40
	','            reduce using rule 20
	';'            reduce using rule 20


State 34

	ListClassItem -> ClassItem .                        (rule 21)
	ListClassItem -> ClassItem . ',' ListClassItem      (rule 22)

	','            shift, and enter state 39
	';'            reduce using rule 21


State 35

	ClassStmt -> Type ListClassItem . ';'               (rule 18)

	';'            shift, and enter state 38


State 36

	ListClassStmt -> ClassStmt ListClassStmt .          (rule 16)

	'}'            reduce using rule 16


State 37

	ClassBody -> '{' ListClassStmt '}' .                (rule 14)

	'boolean'      reduce using rule 14
	'class'        reduce using rule 14
	'int'          reduce using rule 14
	'string'       reduce using rule 14
	'void'         reduce using rule 14
	L_Ident        reduce using rule 14
	%eof           reduce using rule 14


State 38

	ClassStmt -> Type ListClassItem ';' .               (rule 18)

	';'            reduce using rule 18
	'boolean'      reduce using rule 18
	'int'          reduce using rule 18
	'string'       reduce using rule 18
	'void'         reduce using rule 18
	'}'            reduce using rule 18
	L_Ident        reduce using rule 18


State 39

	ListClassItem -> ClassItem ',' . ListClassItem      (rule 22)

	L_Ident        shift, and enter state 2

	Ident          goto state 72
	ClassItem      goto state 34
	ListClassItem  goto state 73

State 40

	ClassStmt -> Type Ident '(' . ListArg ')' Block     (rule 19)

	')'            reduce using rule 11
	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 26
	ListArg        goto state 71
	Type           goto state 28

State 41

	ListArg -> Arg ',' ListArg .                        (rule 13)

	')'            reduce using rule 13


State 42

	TopDef -> Type Ident '(' ListArg ')' Block .        (rule 5)

	'boolean'      reduce using rule 5
	'class'        reduce using rule 5
	'int'          reduce using rule 5
	'string'       reduce using rule 5
	'void'         reduce using rule 5
	L_Ident        reduce using rule 5
	%eof           reduce using rule 5


State 43

	Block -> '{' . ListStmt '}'                         (rule 23)

	'!'            shift, and enter state 58
	'('            shift, and enter state 59
	'-'            shift, and enter state 60
	';'            shift, and enter state 61
	'boolean'      shift, and enter state 8
	'false'        shift, and enter state 62
	'for'          shift, and enter state 63
	'if'           shift, and enter state 64
	'int'          shift, and enter state 10
	'new'          shift, and enter state 65
	'return'       shift, and enter state 66
	'string'       shift, and enter state 11
	'true'         shift, and enter state 67
	'void'         shift, and enter state 12
	'while'        shift, and enter state 68
	'{'            shift, and enter state 43
	'}'            reduce using rule 24
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 69
	L_quoted       shift, and enter state 70

	Ident          goto state 44
	Integer        goto state 45
	String         goto state 46
	Block          goto state 47
	ListStmt       goto state 48
	Stmt           goto state 49
	Type           goto state 50
	Expr6          goto state 51
	Expr5          goto state 52
	Expr4          goto state 53
	Expr3          goto state 54
	Expr2          goto state 55
	Expr1          goto state 56
	Expr           goto state 57

State 44

	Stmt -> Ident . '=' Expr ';'                        (rule 29)
	Stmt -> Ident . '[' Expr ']' '=' Expr ';'           (rule 30)
	Stmt -> Ident . '++' ';'                            (rule 32)
	Stmt -> Ident . '--' ';'                            (rule 35)
	Type -> Ident .                                     (rule 53)
	Expr6 -> Ident .                                    (rule 57)
	Expr6 -> Ident . '[' Expr ']'                       (rule 58)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 62)

	'!='           reduce using rule 57
	'%'            reduce using rule 57
	'&&'           reduce using rule 57
	'('            shift, and enter state 111
	'*'            reduce using rule 57
	'+'            reduce using rule 57
	'++'           shift, and enter state 112
	'-'            reduce using rule 57
	'--'           shift, and enter state 113
	'.'            reduce using rule 57
	'/'            reduce using rule 57
	';'            reduce using rule 57
	'<'            reduce using rule 57
	'<='           reduce using rule 57
	'='            shift, and enter state 114
	'=='           reduce using rule 57
	'>'            reduce using rule 57
	'>='           reduce using rule 57
	'['            shift, and enter state 115
	'[]'           reduce using rule 53
	'||'           reduce using rule 57
	L_Ident        reduce using rule 53


State 45

	Expr6 -> Integer .                                  (rule 59)

	'!'            reduce using rule 59
	'!='           reduce using rule 59
	'%'            reduce using rule 59
	'&&'           reduce using rule 59
	'('            reduce using rule 59
	')'            reduce using rule 59
	'*'            reduce using rule 59
	'+'            reduce using rule 59
	','            reduce using rule 59
	'-'            reduce using rule 59
	'.'            reduce using rule 59
	'/'            reduce using rule 59
	';'            reduce using rule 59
	'<'            reduce using rule 59
	'<='           reduce using rule 59
	'=='           reduce using rule 59
	'>'            reduce using rule 59
	'>='           reduce using rule 59
	']'            reduce using rule 59
	'boolean'      reduce using rule 59
	'else'         reduce using rule 59
	'false'        reduce using rule 59
	'for'          reduce using rule 59
	'if'           reduce using rule 59
	'int'          reduce using rule 59
	'new'          reduce using rule 59
	'return'       reduce using rule 59
	'string'       reduce using rule 59
	'true'         reduce using rule 59
	'void'         reduce using rule 59
	'while'        reduce using rule 59
	'{'            reduce using rule 59
	'||'           reduce using rule 59
	'}'            reduce using rule 59
	L_Ident        reduce using rule 59
	L_integ        reduce using rule 59
	L_quoted       reduce using rule 59


State 46

	Expr6 -> String .                                   (rule 68)

	'!'            reduce using rule 68
	'!='           reduce using rule 68
	'%'            reduce using rule 68
	'&&'           reduce using rule 68
	'('            reduce using rule 68
	')'            reduce using rule 68
	'*'            reduce using rule 68
	'+'            reduce using rule 68
	','            reduce using rule 68
	'-'            reduce using rule 68
	'.'            reduce using rule 68
	'/'            reduce using rule 68
	';'            reduce using rule 68
	'<'            reduce using rule 68
	'<='           reduce using rule 68
	'=='           reduce using rule 68
	'>'            reduce using rule 68
	'>='           reduce using rule 68
	']'            reduce using rule 68
	'boolean'      reduce using rule 68
	'else'         reduce using rule 68
	'false'        reduce using rule 68
	'for'          reduce using rule 68
	'if'           reduce using rule 68
	'int'          reduce using rule 68
	'new'          reduce using rule 68
	'return'       reduce using rule 68
	'string'       reduce using rule 68
	'true'         reduce using rule 68
	'void'         reduce using rule 68
	'while'        reduce using rule 68
	'{'            reduce using rule 68
	'||'           reduce using rule 68
	'}'            reduce using rule 68
	L_Ident        reduce using rule 68
	L_integ        reduce using rule 68
	L_quoted       reduce using rule 68


State 47

	Stmt -> Block .                                     (rule 27)

	'!'            reduce using rule 27
	'('            reduce using rule 27
	'-'            reduce using rule 27
	';'            reduce using rule 27
	'boolean'      reduce using rule 27
	'else'         reduce using rule 27
	'false'        reduce using rule 27
	'for'          reduce using rule 27
	'if'           reduce using rule 27
	'int'          reduce using rule 27
	'new'          reduce using rule 27
	'return'       reduce using rule 27
	'string'       reduce using rule 27
	'true'         reduce using rule 27
	'void'         reduce using rule 27
	'while'        reduce using rule 27
	'{'            reduce using rule 27
	'}'            reduce using rule 27
	L_Ident        reduce using rule 27
	L_integ        reduce using rule 27
	L_quoted       reduce using rule 27


State 48

	Block -> '{' ListStmt . '}'                         (rule 23)

	'}'            shift, and enter state 110


State 49

	ListStmt -> Stmt . ListStmt                         (rule 25)

	'!'            shift, and enter state 58
	'('            shift, and enter state 59
	'-'            shift, and enter state 60
	';'            shift, and enter state 61
	'boolean'      shift, and enter state 8
	'false'        shift, and enter state 62
	'for'          shift, and enter state 63
	'if'           shift, and enter state 64
	'int'          shift, and enter state 10
	'new'          shift, and enter state 65
	'return'       shift, and enter state 66
	'string'       shift, and enter state 11
	'true'         shift, and enter state 67
	'void'         shift, and enter state 12
	'while'        shift, and enter state 68
	'{'            shift, and enter state 43
	'}'            reduce using rule 24
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 69
	L_quoted       shift, and enter state 70

	Ident          goto state 44
	Integer        goto state 45
	String         goto state 46
	Block          goto state 47
	ListStmt       goto state 109
	Stmt           goto state 49
	Type           goto state 50
	Expr6          goto state 51
	Expr5          goto state 52
	Expr4          goto state 53
	Expr3          goto state 54
	Expr2          goto state 55
	Expr1          goto state 56
	Expr           goto state 57

State 50
